# advent-of-code

./: .gitignore  rust-toolchain.toml
2024/: pyproject.toml
2024/day-01/: task.md
2024/day-13/: part2.ipynb
2024/day-15/: Cargo.toml
2025/: Cargo.toml  pyproject.toml
2025/daily-template/: part1.py
2025/day-01/: output1.txt  output_example.txt  part1.md  part1.py  part2.py
2025/day-01/benches/: benchmarks.rs
2025/day-01/src/: lib.rs  part1.rs  part2.rs
2025/day-02/: part1.py  part2.py
2025/day-02/src/: part1.rs  part2.rs
2025/day-03/: part1.py  part2.py
2025/day-03/benches/: benchmarks.rs
2025/day-03/src/: part1.rs  part2.rs
2025/day-04/: part1.py  part2.py
2025/day-04/src/: part1.rs  part2.rs
2025/day-05/: part1.py  part2.py
2025/day-05/benches/: benchmarks.rs
2025/day-05/src/: part1.rs  part2.rs
2025/day-06/: Cargo.toml  part1.py  part2.py
2025/day-06/src/: part1.rs  part2.rs
2025/day-07/: part1.py  part2.py
2025/day-07/src/: part1.rs  part2.rs
2025/day-08/: Cargo.toml  part1.py  part2.py
2025/day-08/benches/: benchmarks.rs
2025/day-08/src/: part1.rs  part2.rs
2025/day-09/: part1.py  part2.py
2025/day-09/src/: part1.rs  part2.rs
2025/day-10/: Cargo.toml  SUMMARY.md  part1.py  part2.py  process2.py
2025/day-10/src/: part1.rs  part2.rs
day-01/src/: part1.rs  part2.rs
day-02/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-07/: Cargo.toml
day-08/: Cargo.toml
day-10/: Cargo.toml
day-11/: Cargo.toml
day-12/: Cargo.toml
day-13/: Cargo.toml  part2.ipynb
day-14/: Cargo.toml
day-15/: Cargo.toml
(+56 files in other folders)
